rest client to search address by zipcode using viacep

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,7 @@ quarkus.jaeger.sampler-param=1
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 quarkus.jaeger.metrics.enabled=true
 
-
+#Clients
+#--- Via Cep
+viacep-api/mp-rest/url=http://viacep.com.br
+viacep-api/mp-rest/scope=javax.enterprise.context.ApplicationScoped
